cmake_minimum_required(VERSION 3.23)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Baekjoon "ICPC/A.cpp" "ICPC/C.cpp" "ICPC/G.cpp" "boardGameCup_1/A번 - 노 땡스!.cpp" "boardGameCup_1/B번 - 할리갈리.cpp" "boardGameCup_1/C번 - 크레이지 타임.cpp" "boardGameCup_1/D번 - Yacht Dice.cpp" "boardGameCup_1/N번 - 수 나누기 게임.cpp" "boardGameCup_1/G번 - 모든 곳을 안전하게.cpp" "boardGameCup_1/E번 - 벚꽃 내리는 시대에 결투를.cpp" "UCPC2023/A번 - 체육은 코딩과목 입니다.cpp" "UCPC2023/D번 - 더 흔한 타일 색칠 문제.cpp" "UCPC2023/I번 - 자석.cpp")
