cmake_minimum_required(VERSION 3.23)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Baekjoon "platinum/P5 2568 전깃줄 - 2.cpp" "platinum/P4 1215 잘못 작성한 요세푸스 코드.cpp" "platinum/P4 12094 2048 (Hard).cpp" "platinum/P4 20149 선분 교차 3.cpp" "platinum/P5 1399 보물의 위치.cpp" "platinum/P5 1725 히스토그램.cpp" "platinum/P5 1786 찾기.cpp" "platinum/P5 2887 행성 터널.cpp" "platinum/P5 6549 히스토그램에서 가장 큰 직사각형.cpp" "platinum/P5 14939 불 끄기.cpp" "platinum/P5 16566 카드 게임.cpp" "platinum/P3 1006 습격자 초라기.cpp" "platinum/P5 7578 공장.cpp" "platinum/P5 2243 사탕상자.cpp" "platinum/P4 3653 영화 수집.cpp" "platinum/P5 2150 Strongly Connected Component.cpp" "platinum/P5 3015 오아시스 재결합.cpp" "platinum/P3 3830 교수님은 기다리지 않는다.cpp" "platinum/P2 9206 나무 말고 꽃.cpp" "platinum/P1 2415 직사각형.cpp")
