cmake_minimum_required(VERSION 3.23)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Baekjoon "silver/S2 26518 수열의 극한값.cpp" "silver/S1 2529 부등호.cpp" "silver/S1 10844 쉬운 계단 수.cpp" "silver/S1 12849 본대 산책.cpp" "silver/S1 12852 1로 만들기 2.cpp" "silver/S1 14888 연산자 끼워넣기.cpp" "silver/S2 1182 부분수열의 합.cpp" "silver/S2 14889 스타트와 링크.cpp" "silver/S2 16953 A → B.cpp" "silver/S5 23246 Sport Climbing Combined.cpp" "silver/S5 26517 연속인가.cpp" "silver/S4 24060 알고리즘 수업 - 병합 정렬 1.cpp" "silver/S3 1935 후위 표기식2.cpp" "silver/S3 11663 선분 위의 점.cpp" "silver/S4 1158 요세푸스 문제.cpp" "silver/S3 2346 풍선 터뜨리기.cpp" "silver/S4 18110 solved.ac.cpp" "silver/S1 14940 쉬운 최단거리.cpp" "silver/S1 20529 가장 가까운 세 사람의 심리적 거리.cpp" "silver/S2 21736 헌내기는 친구가 필요해.cpp" "silver/S4 28353 고양이 카페.cpp" "silver/S3 28356 부정행위 멈춰!.cpp")
